generated/checkers/gen/AllGen-Buffer-Overflow-81137162bfaa7278785b24c1fd2e9e74f082e8e4/build_logs/syntax-repair-00/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPreCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:127:30: error: no matching function for call to ‘llvm::APInt::toString(int, bool)’
  127 |       Msg += DstSize.toString(10, false);
      |              ~~~~~~~~~~~~~~~~^~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/APSInt.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/APFixedPoint.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/APValue.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Stmt.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/APInt.h:1628:8: note: candidate: ‘void llvm::APInt::toString(llvm::SmallVectorImpl<char>&, unsigned int, bool, bool, bool) const’
 1628 |   void toString(SmallVectorImpl<char> &Str, unsigned Radix, bool Signed,
      |        ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/APInt.h:1628:8: note:   candidate expects 5 arguments, 2 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:129:29: error: no matching function for call to ‘llvm::APInt::toString(int, bool)’
  129 |       Msg += SrcLen.toString(10, false);
      |              ~~~~~~~~~~~~~~~^~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/APSInt.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/APFixedPoint.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/APValue.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Stmt.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/APInt.h:1628:8: note: candidate: ‘void llvm::APInt::toString(llvm::SmallVectorImpl<char>&, unsigned int, bool, bool, bool) const’
 1628 |   void toString(SmallVectorImpl<char> &Str, unsigned Radix, bool Signed,
      |        ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/APInt.h:1628:8: note:   candidate expects 5 arguments, 2 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:145:30: error: no matching function for call to ‘llvm::APInt::toString(int, bool)’
  145 |       Msg += DstSize.toString(10, false);
      |              ~~~~~~~~~~~~~~~~^~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/APSInt.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/APFixedPoint.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/APValue.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Stmt.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/APInt.h:1628:8: note: candidate: ‘void llvm::APInt::toString(llvm::SmallVectorImpl<char>&, unsigned int, bool, bool, bool) const’
 1628 |   void toString(SmallVectorImpl<char> &Str, unsigned Radix, bool Signed,
      |        ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/APInt.h:1628:8: note:   candidate expects 5 arguments, 2 provided
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:147:31: error: no matching function for call to ‘llvm::APInt::toString(int, bool)’
  147 |       Msg += SrcBound.toString(10, false);
      |              ~~~~~~~~~~~~~~~~~^~~~~~~~~~~
In file included from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/APSInt.h:18,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/APFixedPoint.h:19,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/APValue.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/AST/Stmt.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/Analysis/PathDiagnostic.h:16,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/include/clang/StaticAnalyzer/Core/BugReporter/BugReporter.h:17,
                 from /scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:1:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/APInt.h:1628:8: note: candidate: ‘void llvm::APInt::toString(llvm::SmallVectorImpl<char>&, unsigned int, bool, bool, bool) const’
 1628 |   void toString(SmallVectorImpl<char> &Str, unsigned Radix, bool Signed,
      |        ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/llvm/include/llvm/ADT/APInt.h:1628:8: note:   candidate expects 5 arguments, 2 provided
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
